<resources>
    <string name="app_name">AdditionApp</string>
    <string name="action_settings">Settings</string>
    <string name="_1st_number">1st Number</string>
    <string name="_2nd_number">2nd Number</string>
    <string name="result">RESULT</string>
    <string name="addition">ADDITION</string>
    <string name="add">Add</string>
    <string name="output">Result</string>
    <string name="out">output</string>
</resources>
